--- a/templates/job/show.html.twig
+++ b/templates/job/show.html.twig
@@ -1,10 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{parent() - Edit}}{% endblock %}
 {% block title %}{{parent()|upper}} - consultation de {{job.getType()}} {% endblock %}
 
 {% block body %}
     <h1>entreprise {{job.getCompany()}} </h1><br>
     <h1>{{job.getDescription()}} </h1><br>
     <h2>Date d'expiration :{{job.getExpiresAt()| date('d-m-Y')}} </h2><br>
+    <h3>
+        <ul>
+            {% for candidature in listCandidatures %}
+            <h4 class="nav nav-pills nav-stacked">Candidat</h4><br>
+            <li>{{ candidature.candidat }}</li>
+            <li>{{ candidature.contenu }}</li>
+            <li>{{ candidature.date | date('d-m-Y') }}</li>
+            {% endfor %}
+        </ul>
+    </h3>
 {% endblock %}
