--- a/templates/job/home.html.twig
+++ b/templates/job/home.html.twig
@@ -26,7 +26,7 @@
                 <td>{{ candidat.contenu }}</td>
                 <td>
                     <a href="#" class="btn btn-primary">Voir</a>
-                    <a href="#" class="btn btn-info">Modifier</a>
+                    <a href="{{ path('edit_user', {'id':candidat.id }) }}" class="btn btn-info">Modifier</a>
                     <a href="{{ path('cand_delete', {'id':candidat.id }) }}" class="btn btn-danger" onclick="return confirm('Are you sure to delete!{{ candidat.candidat}}')">Supprimer</a>
                 </td>
             </tr>
